--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ body {
   background-color: white;
 
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+  display: grid;
+}
+
+.square {
+  /* width: 20px;
+  height: 20px; */
 }
 
 .button-row {
